# EZLaunch

Launcher/: pom.xml
Launcher/src/main/java/dmfmm/ezlaunch/: LaunchMain.java
Packager/: Cargo.toml  README.md
Packager/.cargo/: config
Packager/assets/: splash.psd
Packager/build_libs/: packager_gui.exe.manifest
Packager/src/cmdline/: dependency.rs  main.rs
Packager/src/gui/: main.rs
Packager/src/gui/project/: dependency.rs  mod.rs  project.rs
Packager/src/gui/splasher/: consts.rs  mod.rs  splash.rs
Packager/src/gui/welcome/: consts.rs  mod.rs  welcome.rs
